revert commit to add validation commit

--- a/survey_app/templates/page2.html
+++ b/survey_app/templates/page2.html
@@ -89,14 +89,6 @@
             margin-right: 10px;
         }
 
-        .error {
-            color: red; /* Change the color of the error message */
-            font-size: 14px; /* Change the font size */
-            font-weight: bold; /* Optional: Makes the error bold */
-            margin-top: 5px; /* Adds some space between the field and error message */
-        }
-
-
         @media (max-width: 768px) {
             .image-container {
                 height: 200px;
@@ -116,12 +108,12 @@
 
         <!-- Form Div -->
         <div class="form-container">
-            <h2>Donor Selection Form</h2>
+            <h2>Donor Survey Form</h2>
             <form method="post" novalidate>
                 {% csrf_token %}
 
                 <div class="mb-1">
-                    <label for="id_infections_diagnosed" class="form-label">1. Have you ever been diagnosed with, or exposed to, any serious infections like HIV, hepatitis, tuberculosis, or Cancer?</label>
+                    <label for="id_infections_diagnosed" class="form-label">Have you ever been diagnosed with, or exposed to, any serious infections like HIV, hepatitis, tuberculosis, or Cancer?</label>
                     {{ form.infections_diagnosed }}
                     {% if form.infections_diagnosed.errors %}
                     <div class="error">
@@ -134,7 +126,7 @@
 
 
                 <div class="mb-1">
-                    <label for="id_autoimmune_condition" class="form-label">2. Do you have any autoimmune conditions that you are aware of?</label>
+                    <label for="id_autoimmune_condition" class="form-label">Do you have any autoimmune conditions that you are aware of?</label>
                     {{ form.autoimmune_condition }}
                     {% if form.autoimmune_condition.errors %}
                     <div class="error">
@@ -148,7 +140,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_reproductive_urinary_conditions" class="form-label mb-2">3. Do you have any known diseases of the reproductive or urinary system? Eg: UTIs, Kidney Stones, Bladder stones, Ovarian Cysts etc.</label>
+                    <label for="id_reproductive_urinary_conditions" class="form-label mb-2">Do you have any known diseases of the reproductive or urinary system? Eg: UTIs, Kidney Stones, Bladder stones, Ovarian Cysts etc.</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button using Django form field -->
@@ -183,7 +175,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_cardiovascular_conditions" class="form-label mb-2">4. Do you have any known cardiovascular conditions (related to the heart or blood vessels)?</label>
+                    <label for="id_cardiovascular_conditions" class="form-label mb-2">Do you have any known cardiovascular conditions (related to the heart or blood vessels)?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button for cardiovascular_conditions -->
@@ -217,7 +209,7 @@
                 </div>
 
                 <div class="mb-2">
-                    <label for="id_nervous_bone_muscle_conditions" class="form-label mb-2">5.Do you have any known diseases of the nervous system, bones, or muscles?</label>
+                    <label for="id_nervous_bone_muscle_conditions" class="form-label mb-2">Do you have any known diseases of the nervous system, bones, or muscles?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <!-- Render the "Yes" radio button for nervous_bone_muscle_conditions -->
@@ -252,7 +244,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_sleep_disorder_medications" class="form-label">6. Do you take medication for sleep disorders like insomnia, apnea, or others?</label>
+                    <label for="id_sleep_disorder_medications" class="form-label">Do you take medication for sleep disorders like insomnia, apnea, or others?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="sleep_disorder_medications"
@@ -285,7 +277,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_allergies_asthma" class="form-label">7. Do you have any allergies or asthma?</label>
+                    <label for="id_allergies_asthma" class="form-label">Do you have any allergies or asthma?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="allergies_asthma" id="allergies_yes"
@@ -316,7 +308,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_skin_conditions" class="form-label">8. Do you suffer from any skin conditions that require you to take medication?</label>
+                    <label for="id_skin_conditions" class="form-label">Do you suffer from any skin conditions that require you to take medication?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="skin_conditions" id="skin_yes"
@@ -347,7 +339,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_acne_history" class="form-label">9. Do you experience acne or have a history of acne?</label>
+                    <label for="id_acne_history" class="form-label">Do you experience acne or have a history of acne?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="acne_history" id="acne_yes" value="True"
@@ -378,7 +370,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_mental_health_conditions" class="form-label">10. Have you been diagnosed with any psychiatric or mental health conditions?</label>
+                    <label for="id_mental_health_conditions" class="form-label">Have you been diagnosed with any psychiatric or mental health conditions?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="mental_health_conditions"
@@ -411,7 +403,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_blood_transfusion" class="form-label">11. Have you ever received a blood transfusion or blood products? Eg: Blood, Platelets, Plasma etc.</label>
+                    <label for="id_blood_transfusion" class="form-label">Have you ever received a blood transfusion or blood products? Eg: Blood, Platelets, Plasma etc.</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="blood_transfusion"
@@ -444,7 +436,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_high_risk_yellow_fever" class="form-label">12. Have you travelled to a high risk country for yellow fever in the last 6 months? (Countries like: Cameroon, Chad, Congo, Democratic Republic of Congo (DRC), Guinea, Niger, Nigeria, and South Sudan)</label>
+                    <label for="id_high_risk_yellow_fever" class="form-label">Have you travelled to a high risk country for yellow fever in the last 6 months? (Countries like: Cameroon, Chad, Congo, Democratic Republic of Congo (DRC), Guinea, Niger, Nigeria, and South Sudan)</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="high_risk_yellow_fever"
@@ -476,7 +468,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_hospitalization_surgery" class="form-label">13. Have you been hospitalized or undergone surgery in the last 6 months?</label>
+                    <label for="id_hospitalization_surgery" class="form-label">Have you been hospitalized or undergone surgery in the last 6 months?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="hospitalization_surgery"
@@ -509,7 +501,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_contagious_diseases" class="form-label">14. Are you currently suffering from or have recently had any contagious diseases (within the last 2 weeks)? (Eg: flu, colds, or strep throat)</label>
+                    <label for="id_contagious_diseases" class="form-label">Are you currently suffering from or have recently had any contagious diseases (within the last 2 weeks)? (Eg: flu, colds, or strep throat)</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="contagious_diseases" id="contagious_yes"
@@ -540,7 +532,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_multi_drug_resistant_organisms" class="form-label">15. Have you ever been diagnosed with multi-drug resistant organisms?
+                    <label for="id_multi_drug_resistant_organisms" class="form-label">Have you ever been diagnosed with multi-drug resistant organisms?
                         </label>
                     {{ form.multi_drug_resistant_organisms }}
                     {% if form.multi_drug_resistant_organisms.errors %}
@@ -552,15 +544,9 @@
                     {% endif %}
                 </div>
 
-                <!-- --------------------change of other category------------------------- -->
-                <div class="mb-1" id="other_id_multi_drug_resistant_organisms" style="display: none;">
-                    <label for="other_id_multi_drug_resistant_organisms" class="form-label">15.a. Specify Your Answer</label>
-                    {{ form.other_multi_drug_resistant_organisms }}
-                </div>                
 
-                
-                <div class="mb-1">
-                    <label for="id_heart_blood_pressure_diabetes_medication" class="form-label">16. Are you currently taking any medications for heart issues, blood pressure, or diabetes?</label>
+                <div class="mb-2">
+                    <label for="id_heart_blood_pressure_diabetes_medication" class="form-label">Are you currently taking any medications for heart issues, blood pressure, or diabetes?</label>
                     {{ form.heart_blood_pressure_diabetes_medication }}
                     {% if form.heart_blood_pressure_diabetes_medication.errors %}
                     <div class="error">
@@ -573,7 +559,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_mold_exposure" class="form-label">17. Have you been exposed to mold in your living or working space?</label>
+                    <label for="id_mold_exposure" class="form-label">Have you been exposed to mold in your living or working space?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="mold_exposure" id="mold_exposure_yes"
@@ -604,7 +590,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_genetic_conditions" class="form-label">18. Do you or any of your immediate family members have congenital or genetic conditions? Eg. heart defects, neural tube defects, Down’s syndrome, hemophilia, sickle cell anemia, color blindness</label>
+                    <label for="id_genetic_conditions" class="form-label">Do you or any of your immediate family members have congenital or genetic conditions? Eg. heart defects, neural tube defects, Down’s syndrome, hemophilia, sickle cell anemia, color blindness</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="genetic_conditions" id="genetic_yes"
@@ -635,7 +621,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_antibiotics_taken" class="form-label">19. How many times have you taken antibiotics...?</label>
+                    <label for="id_antibiotics_taken" class="form-label">How many times have you taken antibiotics...?</label>
                     {{ form.antibiotics_taken }}
                     {% if form.antibiotics_taken.errors %}
                     <div class="error">
@@ -648,7 +634,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_most_recent_antibiotic_treatment" class="form-label">20. When was your most recent antibiotic treatment?</label>
+                    <label for="id_most_recent_antibiotic_treatment" class="form-label">When was your most recent antibiotic treatment?</label>
                     {{ form.most_recent_antibiotic_treatment }}
                     {% if form.most_recent_antibiotic_treatment.errors %}
                     <div class="error">
@@ -661,7 +647,7 @@
 
 
                 <div class="mb-2">
-                    <label for="id_covid_tested_positive" class="form-label">21. Have you tested positive for COVID-19 in the past month?</label>
+                    <label for="id_covid_tested_positive" class="form-label">Have you tested positive for COVID-19 in the past month?</label>
                     <div class="d-flex">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="covid_tested_positive"
@@ -697,19 +683,6 @@
             </form>
         </div>
     </div>
-
-
-<!-- JavaScript to render other category field-->
-<script>
-    document.getElementById('id_multi_drug_resistant_organisms').addEventListener('change', function() {
-        var otherCategoryInput = document.getElementById('other_id_multi_drug_resistant_organisms');
-        if (this.value === 'Other') {
-            otherCategoryInput.style.display = 'block';  // Show the text input when 'Others' is selected
-        } else {
-            otherCategoryInput.style.display = 'none';   // Hide the text input when 'Others' is not selected
-        }
-    });
-</script>
 </body>
 
 </html>
